[metadata]
name = PyFuncover
version = attr: PyFuncover.__version__
description = Full proteome search for a specific function using BLAST and PFAM
long_description = file: README.md
author = Yoan Bouzin
author_email = yoan.bouzin@gmail.com
url = https://github.com/Tuisto59/PyFuncover
license = GPL
keywords = computational biology
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
include_package_data = True
py_modules = PyFuncover
install_requires =
    matplotlib==3.0.3
    pandas==0.24.2
    biopython==1.73
    requests==2.21.0
setup_requires =
    matplotlib==3.0.3
    pandas==0.24.2
    biopython==1.73
    requests==2.21.0

[options.entry_points]
console_scripts =
    pyfuncover = PyFuncover:main

[zest.releaser]
create-wheel = yes
python-file-with-version = PyFuncover.py
